Fix(scrollbar): Remove horizontal scrollbar
Fix the width and height of the aboutme section, by using width:100%
rather than 100vw

--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@
 
 #myTabContent {
   background-color:white;
-  width:100vw;
-  height: 100vh;
+  width:100%;
+  height: 100%;
   padding-left: 0px;
   padding-right: 0px;
 }
